[package]
name = "totp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lambda_http = "0.5.2"
axum-aws-lambda = "0.1.0"
aws-sdk-dynamodb = "0.15.0"
aws-config = "0.15.0"
tower = "0.4.13"

tokio = {version = "1.19.2", features = ["full"]}
hyper = {version = "0.14.20", features = ["full"]}
axum = "0.5.12"

once_cell = "1.13.0"

serde = {version = "1.0.139", features = ["derive"]}
serde_json = "1.0.82"

uuid = { version = "1.1.2", features = ["serde", "v4"] }

tracing = "0.1.29"	
tracing-subscriber = { version = "0.3", features = ["tracing"] }

totp-lite = "2.0.0"
totp-rs = {version = "2.0.1", features = ["default", "qr"]}
koibumi-base32 = "0.0.2"

regex = "1.6.0"
http = "0.2.8"

rand = "0.8.5"

lazy_static = "1.4.0"

qrcode-generator = "4.1.6"
