[package]
name = "totp-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


lambda_http = "0.6.0"
axum-aws-lambda = "0.2.0"

shuttle-axum = "0.30.1"
shuttle-runtime = "0.30.1"

aws-sdk-dynamodb = "0.16.0"
aws-sdk-s3control = "0.16.0"
aws-config = "0.46.0"

aws-types = {version= "0.46.0", features= ["hardcoded-credentials"]}
tower = "0.4.13"

tokio = {version = "1.3", features = ["process"]}
hyper = {version = "0.14.20", features = ["full"]}
axum = "0.6"

once_cell = "1.13.0"
async_once = "0.2.1"

serde = {version = "1.0.139", features = ["derive"]}
serde_json = "1.0.82"

uuid = { version = "1.1.2", features = ["serde", "v4"] }
dashmap = "5"

sled = "0.34.7"

tracing = "0.1.29"	
tracing-subscriber = { version = "0.3", features = ["tracing"] }

totp-lite = "2.0.0"
totp-rs = {version = "2.0.1", features = ["default", "qr"]}
koibumi-base32 = "0.0.2"
bcrypt = "0.13.0"
rusty_paseto = "0.4.0"
chrono = "0.4.22"

regex = "1.6.0"
regress = "0.4.1"
http = "0.2.8"

rand = "0.8.5"
thiserror = "1.0.50"

qrcode-generator = "4.1.6"

config = "0.13.1"

